@@ -1,3 +1,9 @@
+2008-04-14  David Bateman  <dbateman@free.fr>
+
+	* plot/rose.m: Add missing comment mark that causes issues with
+	octave-forge function referencing.
+	* deprecated/lchol.m, deprecated/splchol.m: Fix texinfo errors.
+
 2008-04-09  John W. Eaton  <jwe@octave.org>
 
 	* deprecated/beta_cdf.m, deprecated/beta_inv.m,
